--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,13 +8,35 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
 
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
     <!-- All the images you need are in the 'img' folder -->
+    <header>
+        <div role="main" class="main-header">
+            <div class="logo"></div>
+            <div class="nav">
+                <nav></nav>
+            </div>
+            <div class="principal-photo">
+                <button>Learn more</button>
+            </div>
+        </div>
+    </header>
 
+    <main role="content-container">
+        <div class="content-container"></div>
+    </main>
+
+    <footer>
+        <div class="footer">
+
+        </div>
+    </footer>
 </body>
+
 </html>
