continue the header

--- a/index.html
+++ b/index.html
@@ -18,23 +18,72 @@
     <!-- All the images you need are in the 'img' folder -->
     <header>
         <div role="main" class="main-header">
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="./img/karma-logo.svg" alt="karma-logo" width="30px">
+            </div>
             <div class="nav">
-                <nav></nav>
+                <nav class="nav-intro">
+                    <ul>
+                        <li>Meet Karma</li>
+                        <li>How it Works</li>
+                        <li>Store</li>
+                        <li>Blog</li>
+                        <li>Help</li>
+                        <li>Login</li>
+                    </ul>
+                </nav>
             </div>
-            <div class="principal-photo">
-                <button>Learn more</button>
-            </div>
+
         </div>
     </header>
 
     <main role="content-container">
-        <div class="content-container"></div>
+        <div class="content-container">
+            <h1>Introducing Karma</h1>
+            <p>Bring WiFi whit you, everywhere you go</p>
+            <button id="learn-button">Learn more</button>
+        </div>
+        <section>
+            <div class="main-info">
+                <h1>Everyone needs a littles Karma</h1>
+                <div class="main-info-describe">
+
+                    <div>
+                        <img src="./img/icon-devices.svg" alt="icon-devices" width="150px"><br>
+                        <p>Boost your productivity</p>
+                    </div>
+
+                    <div>
+                        <img src="./img/icon-coffee.svg" alt="icon-cup-coffee" width="150px">
+                        <p>Internet for all devices</p>
+                    </div>
+
+                    <div>
+                        <img src="./img/icon-refill.svg" alt="icon-refill" width="150px">
+                        <p>Pay as You Go</p>
+                    </div>
+
+
+
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <div class="footer">
+            <h4>Join us on</h4>
+            <div class="apps-images">
+                <img src="./img/twitter-icon.svg" alt="Twitter-icon" width="20px">
 
+                <img src="./img/facebook-icon.svg" alt="Facebook-icon" width="20px">
+
+                <img src="./img/instagram-icon.svg" alt="instagram-icon" width="20px">
+
+            </div>
+            <p>Karma Mobility, Inc.</p>
         </div>
     </footer>
 </body>
