--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="logo">
                 <img src="./img/karma-logo.svg" alt="karma-logo" width="30px">
             </div>
-            <div class="nav">
-                <nav class="nav-intro">
+            <nav class="nav">
+                <div class="nav-intro">
                     <ul>
                         <li>Meet Karma</li>
                         <li>How it Works</li>
@@ -31,8 +31,8 @@
                         <li>Help</li>
                         <li>Login</li>
                     </ul>
-                </nav>
-            </div>
+                </div>
+            </nav>
 
         </div>
     </header>
